objects/Exercise__c.object
<CustomObject>
    <description>List of exercises however a user will be working on a single exercise at any given time</description>
    <fields>
        <fullName>ActiveTasks__c</fullName>
        <label>ActiveTasks</label>
        <summaryFilterItems>
            <field>Task__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Exercise__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Detail info on exercise objectives and goals.</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Image__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;Active&apos;), IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;Completed&apos;) , IMAGE(&apos;/img/samples/light_yellow.gif&apos;, &apos;Pending&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status_Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VideoID__c</fullName>
        <label>VideoID</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxPossibleScore__c</fullName>
        <description>sum of maxPossibleScore_c of all the tasks related to particular exercies</description>
        <label>maxPossibleScore</label>
        <summarizedField>Task__c.maxPossibleScore__c</summarizedField>
        <summaryForeignKey>Task__c.Exercise__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Exercise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Sequence__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Exercise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>